# robotao

./: .gitmodules  README.md
robotao_control/: CMakeLists.txt  package.xml
robotao_control/script/: forward_kinematic.py  forward_kinematic_dh.py  robotao_gait.py  xbox_controller.py
robotao_description/: CMakeLists.txt  package.xml
robotao_description/launch/: rviz.launch
robotao_description/meshes/: body.stl  lower_leg.stl  upper_leg.stl
robotao_description/rviz/: robotao.rviz
robotao_description/script/: box_moment_inertia.py  cylinder_moment_inertia.py
robotao_description/urdf/: robotao-lidar.urdf.xacro  robotao.gazebo  robotao.urdf.xacro  robotao_notmod.urdf.xacro
robotao_gazebo/: CMakeLists.txt  package.xml
robotao_gazebo/config/: position_controller.yaml
robotao_gazebo/launch/: robotao_bringup.launch  robotao_empty_world.launch
robotao_gazebo/models/Maze/: model.sdf
robotao_gazebo/models/autcup_city_tiles/: autcup_city_tiles.dae  autcup_city_tiles.sdf  autcup_city_tiles_a.dae  model.config
robotao_gazebo/models/mini_cone/: mini_cone.dae  mini_cone.sdf  model.config
robotao_gazebo/world/: empty_robotis.world  maze_world.world
