<?xml version="1.0"?>
<package format="2">
  <name>robotao_description</name>
  <version>0.0.0</version>
  <description>
    Model of the robot
  </description>

  <maintainer email="nesvera@todo.todo">nesvera</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <build_depend>rospy</build_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>

</package>
